--- a/Cliente/package.json
+++ b/Cliente/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -21,6 +22,7 @@
     "dotenv": "^16.5.0",
     "expo": "~53.0.9",
     "expo-file-system": "~18.1.10",
+    "expo-linear-gradient": "~14.1.4",
     "expo-media-library": "~17.1.6",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
@@ -29,6 +31,7 @@
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
