--- a/Cliente/package.json
+++ b/Cliente/package.json
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/webpack-config": "^19.0.1",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
